--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"  lang="ru">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Пользователи</title>
@@ -24,7 +24,12 @@
                 <td th:text="${product.title}"></td>
                 <td th:text="${product.cost}"></td>
             </tr>
-            </tbody>
+<!--            <tbody>-->
+<!--            <tr th:each="product : ${products.content}">-->
+<!--                <td th:text="${product.title}"></td>-->   То самое место =)
+<!--                <td th:text="${product.cost}"></td>-->
+<!--            </tr>-->
+<!--            </tbody>-->
         </table>
         <div>
             <form th:action="@{/products/all}" th:object="${priceFilter}" method="get" >
