--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -26,7 +26,7 @@
             </tr>
 <!--            <tbody>-->
 <!--            <tr th:each="product : ${products.content}">-->
-<!--                <td th:text="${product.title}"></td>-->   То самое место =)
+<!--                <td th:text="${product.title}"></td>-->
 <!--                <td th:text="${product.cost}"></td>-->
 <!--            </tr>-->
 <!--            </tbody>-->
