--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
 <body>
     <H1>App</H1>
     <div class="container">
-        <form th:action="@{/products/all}"  method="get">
+        <form th:action="@{/products/}"  method="GET">
             <button>Продукты</button>
         </form>
     </div>
