--- a/src/main/resources/templates/product.html
+++ b/src/main/resources/templates/product.html
@@ -25,7 +25,7 @@
                                 </button>
                             </div>
                             <div class="modal-body">
-                                <form th:action="@{/products/add}" th:object="${product}" method="post">
+                                <form th:action="@{/products/add}" th:object="${newProduct}" method="post">
                                     <div class="form-group">
                                         <label for="recipient-name" class="col-form-label">Product Title</label>
                                         <input type="text" class="form-control" id="recipient-name" th:field="*{title}">
@@ -50,9 +50,9 @@
                             data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false" th:text="'Page Size: ' + ${productPage.size}"></button>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" th:href="@{/products/all(size=5)}">5</a>
-                        <a class="dropdown-item" th:href="@{/products/all(size=10)}">10</a>
-                        <a class="dropdown-item" th:href="@{/products/all(size=20)}">20</a>
+                        <a class="dropdown-item" th:href="@{'/products/?size='+5+${filter.toString()}}">5</a>
+                        <a class="dropdown-item" th:href="@{'/products/?size='+10+${filter.toString()}}">10</a>
+                        <a class="dropdown-item" th:href="@{'/products/?size='+20+${filter.toString()}}">20</a>
                     </div>
                 </div>
             </div>
@@ -79,10 +79,11 @@
             </table>
         </div>
         <div>
-            <form th:action="@{/products/all}" method="GET" >
+            <form th:action="@{/products/}" method="GET" >
                 <div class="form-group row">
                     <label for="inputWord" class="col-sm-2 col-form-label">Word For Search</label>
                     <div class="col-sm-10">
+                        <input type="hidden" th:value="${productPage.size}" th:name="size">
                         <input type="text" class="form-control" id="inputWord" th:value="${param.word !=null} ? ${param.word}" th:name="word" placeholder="Word For Search">
                     </div>
                 </div>
@@ -90,31 +91,31 @@
                     <label for="ex2" class="col-sm-2 col-form-label">Filter by price interval:</label>
                     <div class="col-sm-10">
                         <div style="float: left; margin: 10px; width: 40px">
-                            <span id="l1" th:text="${range[0]}"></span>
+                            <span id="l1" th:text="${filter.getRange() !=null} ? ${filter.getRange()[0]} : ${filter.getDefaultRange()[0]}"></span>
                         </div>
                         <div style="float: left; margin: 10px; width: 220px">
                             <input class="slider"
                                    data-slider-tooltip="show"
                                    id="ex2"
                                    th:name="range"
-                                   th:value="${param.range !=null} ? ${param.range}" type="text">
+                                   th:value="${filter.getRange() !=null} ? ${filter.getRange()}" type="text">
                         </div>
                         <div style="float: left; margin: 10px; width: 40px">
-                            <span id="l2" th:text="${range[1]}"></span>
+                            <span id="l2" th:text="${filter.getRange() !=null} ? ${filter.getRange()[1]} : ${filter.getDefaultRange()[1]}"></span>
                         </div>
-                        <input type="hidden" th:value="${productPage.size}" th:name="size">
+
                     </div>
                 </div>
                 <div>
                     <input type="submit" class="btn btn-warning" value="Filter">
-                    <a role="button" class="btn btn-danger" th:href="@{/products/all (size=${productPage.size} )}">Reset Filter</a>
+                    <a role="button" class="btn btn-danger" th:href="@{/products/ (size=${productPage.size} )}">Reset Filter</a>
                 </div>
             </form>
         </div>
         <script th:inline="javascript">
-            var min = [[${defaultMin}]];
-            var max = [[${defaultMax}]];
-            var value = [[${range}]];
+            var min = [[${filter.getDefaultRange()[0]}]];
+            var max = [[${filter.getDefaultRange()[1]}]];
+            var value = [[${filter.getRange() !=null} ? ${filter.getRange()} : ${filter.getDefaultRange()}]];
             var slider = new Slider('#ex2', {
                 min: min,
                 max: max,
@@ -132,16 +133,13 @@
             <nav aria-label="Page navigation">
                 <ul class="pagination justify-content-center" th:if="${productPage.totalPages > 0}">
                     <li class="page-item" th:classappend="${productPage.isFirst() ? 'disabled':''}">
-                        <a class="page-link" th:href="@{/products/all
-                    (page=${productPage.getNumber()},size=${productPage.size})}" th:text="Previous">%</a>
+                        <a class="page-link" th:href="@{'/products/?page=' + ${productPage.getNumber()}+'&size='+${productPage.size} + ${filter.toString()}}" th:text="Previous">%</a>
                     </li>
                     <li class="page-item" th:classappend="${productPage.getNumber() + 1 == i ? 'active': ''}" th:each="i: ${#numbers.sequence(1,productPage.getTotalPages())}">
-                        <a class="page-link" th:href="@{/products/all
-                    (page=${i},size=${productPage.size}}" th:text="${i}">%</a>
+                        <a class="page-link" th:href="@{'/products/?page=' + ${i}+'&size='+${productPage.size} + ${filter.toString()}}" th:text="${i}">%</a>
                     </li>
                     <li class="page-item" th:classappend="${productPage.isLast() ? 'disabled':''}">
-                        <a class="page-link" th:href="@{/products/all
-                    (page=${productPage.getNumber()+2},size=${productPage.size})}" th:text="Next">%</a>
+                        <a class="page-link" th:href="@{'/products/?page=' + ${productPage.getNumber() + 2}+'&size='+${productPage.size} + ${filter.toString()}}" th:text="Next">%</a>
                     </li>
                 </ul>
             </nav>
