--- a/src/main/resources/templates/shop.html
+++ b/src/main/resources/templates/shop.html
@@ -15,51 +15,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.6.2/bootstrap-slider.js"></script>
 
     <div class="container">
-
-        <div th:replace="~{navigation :: navigation(ADMIN)}"></div>
-
+        <div th:replace="~{navigation :: navigation(Shop)}"></div>
         <div class="btn-group btn-group-lg float-right" role="group" aria-label="Basic example">
-            <div>
-                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap">Add New Product</button>
-                <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                    <div class="modal-dialog" role="document">
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5 class="modal-title" id="exampleModalLabel">New message</h5>
-                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="modal-body">
-                                <form th:action="@{/products/add}" th:object="${newProduct}" method="post">
-                                    <div class="form-group">
-                                        <label for="recipient-name" class="col-form-label">Product Title</label>
-                                        <input type="text" class="form-control" id="recipient-name" th:field="*{title}">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="message-text" class="col-form-label">Product Cost</label>
-                                        <input type="number" class="form-control" id="message-text" th:field="*{cost}">
-                                    </div>
-                                    <div class="modal-footer">
-                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                                        <input type="submit" class="btn btn-secondary" value="Add Product">
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div>
-                <div class="btn-group">
-                    <button type="button" class="btn btn-danger dropdown-toggle"
-                            data-toggle="dropdown" aria-haspopup="true"
-                            aria-expanded="false" th:text="'Page Size: ' + ${productPage.size}"></button>
-                    <div class="dropdown-menu">
-                        <a class="dropdown-item" th:href="@{'/products/?size='+5+${filter.toString()}}">5</a>
-                        <a class="dropdown-item" th:href="@{'/products/?size='+10+${filter.toString()}}">10</a>
-                        <a class="dropdown-item" th:href="@{'/products/?size='+20+${filter.toString()}}">20</a>
-                    </div>
+            <div class="btn-group">
+                <button type="button" class="btn btn-danger dropdown-toggle"
+                        data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false" th:text="'Page Size: ' + ${productPage.size}"></button>
+                <div class="dropdown-menu">
+                    <a class="dropdown-item" th:href="@{'/shop/?size='+5+${filter.toString()}}">5</a>
+                    <a class="dropdown-item" th:href="@{'/shop/?size='+10+${filter.toString()}}">10</a>
+                    <a class="dropdown-item" th:href="@{'/shop/?size='+20+${filter.toString()}}">20</a>
                 </div>
             </div>
         </div>
@@ -68,7 +33,7 @@
             <table class="table table-hover">
                 <thead class="thead-dark">
                 <tr>
-                    <th class="col-md-3">Название</th>
+                    <th class="col">Название</th>
                     <th class="col">Цена</th>
                     <th class="col"></th>
                 </tr>
@@ -78,14 +43,14 @@
                     <td th:text="${product.title}"></td>
                     <td th:text="${product.cost}"></td>
                     <td>
-                        <a role="button" class="btn btn-info" th:href="@{'/products/edit/' + ${product.id}}">Edit</a>
+                        <a role="button" class="btn btn-info" th:href="@{'/cart/add/' + ${product.id}}">Add to Cart</a>
                     </td>
                 </tr>
                 </tbody>
             </table>
         </div>
         <div>
-            <form th:action="@{/products/}" method="GET" >
+            <form th:action="@{/shop/}" method="GET" >
                 <div class="form-group row">
                     <label for="inputWord" class="col-sm-2 col-form-label">Word For Search</label>
                     <div class="col-sm-10">
@@ -114,7 +79,7 @@
                 </div>
                 <div>
                     <input type="submit" class="btn btn-warning" value="Filter">
-                    <a role="button" class="btn btn-danger" th:href="@{/products/ (size=${productPage.size} )}">Reset Filter</a>
+                    <a role="button" class="btn btn-danger" th:href="@{/shop/ (size=${productPage.size} )}">Reset Filter</a>
                 </div>
             </form>
         </div>
@@ -139,13 +104,13 @@
             <nav aria-label="Page navigation">
                 <ul class="pagination justify-content-center" th:if="${productPage.totalPages > 0}">
                     <li class="page-item" th:classappend="${productPage.isFirst() ? 'disabled':''}">
-                        <a class="page-link" th:href="@{'/products/?page=' + ${productPage.getNumber()}+'&size='+${productPage.size} + ${filter.toString()}}" th:text="Previous">%</a>
+                        <a class="page-link" th:href="@{'/shop/?page=' + ${productPage.getNumber()}+'&size='+${productPage.size} + ${filter.toString()}}" th:text="Previous">%</a>
                     </li>
                     <li class="page-item" th:classappend="${productPage.getNumber() + 1 == i ? 'active': ''}" th:each="i: ${#numbers.sequence(1,productPage.getTotalPages())}">
-                        <a class="page-link" th:href="@{'/products/?page=' + ${i}+'&size='+${productPage.size} + ${filter.toString()}}" th:text="${i}">%</a>
+                        <a class="page-link" th:href="@{'/shop/?page=' + ${i}+'&size='+${productPage.size} + ${filter.toString()}}" th:text="${i}">%</a>
                     </li>
                     <li class="page-item" th:classappend="${productPage.isLast() ? 'disabled':''}">
-                        <a class="page-link" th:href="@{'/products/?page=' + ${productPage.getNumber() + 2}+'&size='+${productPage.size} + ${filter.toString()}}" th:text="Next">%</a>
+                        <a class="page-link" th:href="@{'/shop/?page=' + ${productPage.getNumber() + 2}+'&size='+${productPage.size} + ${filter.toString()}}" th:text="Next">%</a>
                     </li>
                 </ul>
             </nav>
