--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -41,7 +41,7 @@
                                    aria-describedby="inputGroup-sizing-sm">
                             <input class="form-control" type="text" placeholder="Password" name="password"
                                    aria-describedby="inputGroup-sizing-sm">
-                            <button class="btn btn-primary btn-sm" type="submit">Log In</button>
+                            <input class="btn btn-primary" type="submit" value="Log In" >
                         </div>
                     </form>
                 </li>
