--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -29,7 +29,7 @@
                     <tr th:each="cartItem : ${cartList}">
                         <td th:text="${cartItem.getKey()!=null} ? ${cartItem.getKey().getTitle()}"></td>
                         <td th:text="${cartItem.getKey()!=null} ? ${cartItem.getKey().getCost()}"></td>
-                        <td th:text="${cartItem.getValue()!=null} ? ${cartItem.getValue()}"></td>
+                        <td th:text="${cartItem.getValue()!=null} ? ${cartItem.getValue().getQuantity()}"></td>
                     </tr>
                     </tbody>
                 </table>
