--- a/src/main/resources/templates/cart.html
+++ b/src/main/resources/templates/cart.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" >
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security" >
 <head>
     <meta charset="utf-8">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/10.6.2/css/bootstrap-slider.css"/>
     <title>Products</title>
 </head>
-
     <body>
-
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -23,6 +21,7 @@
                         <th class="col">Название</th>
                         <th class="col">Цена</th>
                         <th class="col">Шт.</th>
+                        <th class="col">Стоимость</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -30,10 +29,45 @@
                         <td th:text="${cartItem.getKey()!=null} ? ${cartItem.getKey().getTitle()}"></td>
                         <td th:text="${cartItem.getKey()!=null} ? ${cartItem.getKey().getCost()}"></td>
                         <td th:text="${cartItem.getValue()!=null} ? ${cartItem.getValue().getQuantity()}"></td>
+                        <td th:text="${cartItem.getValue()!=null} ? ${cartItem.getValue().getTotalPrice()}"></td>
                     </tr>
                     </tbody>
                 </table>
             </div>
+            <div sec:authorize="isAuthenticated()">
+                <a th:href="@{/shop}" class="btn btn-danger" >Оформить заказ</a>
+            </div>
+            <div sec:authorize="isAnonymous()">
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-whatever="@getbootstrap">Add New Product</button>
+                <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal-dialog" role="document">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="exampleModalLabel">New message</h5>
+                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                            </div>
+                            <div class="modal-body">
+                                <span>Введите свои данные, для оформления заказа.</span>
+                                <form th:action="@{/order/tempUserOrder}" th:object="${tempUser}"  method="POST">
+                                    <div class="form-group">
+                                        <label for="recipient-name" class="col-form-label">Email</label>
+                                        <input type="email" class="form-control" id="recipient-name" th:field="${tempUser.email}">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="message-text" class="col-form-label">Адрес</label>
+                                        <input type="text" class="form-control" id="message-text" th:field="${tempUser.address}">
+                                    </div>
+                                    <div class="modal-footer">
+                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Вернуться</button>
+                                        <input type="submit" class="btn btn-secondary" value="Оформить заказ">
+                                    </div>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
+                </div>
         </div>
     </body>
 </html>
